# Database-Hotel

./: .gitignore  CMakeLists.txt  README.md  Untitled Diagram (2) (2).drawio  Untitled Diagram (2) (3).drawio  Untitled Diagram (2).drawio  build.py  pythonMake.py
benchmark/: CMakeLists.txt  main.cpp  makeLib.py
benchmark/JSON/: CMakeLists.txt
benchmark/JSON_FIND/: CMakeLists.txt  createLargeJSON.hpp  main.cpp
gtest/lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
header/accountDataValidate/: EmailValidation.hpp  PeselValidation.hpp  iValidation.hpp
header/accountLoginRegistration/: AccountLogin.hpp  AccountRegistration.hpp  AddAccount.hpp  Permissions.hpp
header/booking/: Booking.hpp  Guest.hpp
header/dataValidate/: IDCardValidation.hpp  PeselValidation.hpp
header/database/: Database.hpp  JSON.hpp
header/database/JSON/: JSON.hpp
header/guest/: Guest.hpp
header/staff/: Permissions.hpp  Staff.hpp  StaffPosition.hpp
header/validationDate/: Validation.hpp  ValidationEmail.hpp  ValidationIDCard.hpp  ValidationPassword.hpp  ValidationPesel.hpp
lib/date/: date.h
lib/nlohmannjson/: json.hpp
src/: ValidationPesel.cpp  main.cpp
src/account/: AccountRegistration.cpp
src/accountDataValidate/: EmailValidation.cpp  PasswordValidation.cpp  PeselValidation.cpp
src/accountLoginRegistration/: AccountLogin.cpp  AccountRegistration.cpp  AddAccount.cpp
src/booking/: Booking.cpp  Guest.cpp
src/dataValidate/: EmailValidation.cpp  IDCardValidation.cpp  PasswordValidation.cpp  PeselValidation.cpp
src/database/: JSON.cpp
src/database/JSON/: JSON.cpp
src/guest/: Guest.cpp
src/staff/: Staff.cpp
src/validationDate/: ValidationEmail.cpp  ValidationIDCard.cpp  ValidationPassword.cpp  ValidationPesel.cpp
test/: CMakeLists.txt  Guest.cpp  JSON.cpp  Staff.cpp  ValidationEmail.cpp  ValidationIDCard.cpp  ValidationPassword.cpp  ValidationPesel.cpp  accountDataValidate_EmailTest.cpp  accountDataValidate_PasswordTest.cpp  accountDataValidate_PeselTest.cpp  accountLoginRegistration_AccountLoginTEST.cpp  accountLoginRegistration_AccountRegistrationTEST.cpp  accountLoginRegistration_AddAccountTEST.cpp  booking_BookingTest.cpp  booking_GuestTEST.cpp  dataValidate_EmailTest.cpp  dataValidate_IDCardValidationTest.cpp  dataValidate_PasswordTest.cpp  dataValidate_PeselTest.cpp  main.cpp  validatePesel.cpp
test/Utility/: FileManagement.cpp  FileManagement.hpp
test/account/: AccountRegistration.hpp
test/accountDataValidate/: EmailValidation.hpp  PasswordValidation.hpp
test/accountLoginRegistration/: AccountRegistration.hpp  AddAccount.hpp
test/booking/: Booking.hpp  Guest.hpp
test/dataValidate/: EmailValidation.hpp  PasswordValidation.hpp
test/database/JSON/: JSON.cpp  JSON_connect.cpp  JSON_disconnect.cpp  JSON_find.cpp  JSON_getDataWithDB.cpp  JSON_operatorEqualTo.cpp  JSON_sync.cpp
test/guest/: Guest.cpp
test/staff/: Staff.cpp
test/validationDate/: ValidationEmail.cpp  ValidationIDCard.cpp  ValidationPassword.cpp  ValidationPesel.cpp
